--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -8,7 +8,7 @@ source:
 build:
  #preserve_egg_dir: True
  entry_points:
-  - pieparty = pieaparty.__main__:main
+  - pieparty = pieparty.__main__:main
  script: python setup.py install
  noarch: generic
 
