--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -4,25 +4,25 @@ package:
 
 source:
  git_url: https://github.com/amcruise/practice_party.git
- #path: ..
+
 build:
- osx_is_app: True
+ preserve_egg_dir: True
  entry_points:
   - pieparty = pieparty.piemain:main
- script: python setup.py install --user
+ script: python setup.py install --single-version-externally-managed --record=record.txt
  noarch: generic
+ no_link:
+  - pieparty/*.py
 
 requirements: # includes dependencies
- host:
+ host: # packages required to build the package
   - python
+  - setuptools
  run: # required packages listed here are automatically installed.
-  - matplot
-  - numpy x.x
-test:
- files: # if any test files are needed
- source_files: # files that are needed and are temporarily copied into test dir
+  - python
+  - matplotlib
 
 about:
  home: https://github.com/harbourlab/pieparty
  license: MIT
- summary: This is a practice run at building conda packages.
+ summary: 
