--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Publish Conda Package to Anaconda
+name: Publish_Conda
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
@@ -18,8 +18,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: maxibor/conda-package-publish-action@v1.1
+      - uses: actions/checkout@v2
+      - name: publish-to-conda
+        uses: maxibor/conda-package-publish-action@v1.1
         with:
           subDir: conda.recipe
-          AnacondaToken:  
+          AnacondaToken: ${{ secrets.ANACONDA_TOKEN }}
+          platforms: 'win osx linux'
+          
 
