--- a/.github/workflows/Publish_Conda.yml
+++ b/.github/workflows/Publish_Conda.yml
@@ -22,7 +22,7 @@ jobs:
       - name: publish-to-conda
         uses: maxibor/conda-package-publish-action@v1.1
         with:
-          subDir: conda.recipe
+          subDir: ../conda.recipe
           AnacondaToken: ${{ secrets.ANACONDA_TOKEN }}
           
 
