--- a/.github/workflows/Publish_Conda.yml
+++ b/.github/workflows/Publish_Conda.yml
@@ -13,16 +13,15 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
+    #runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: publish-to-conda
-        uses: maxibor/conda-package-publish-action@v1.1
+        uses: fcakyon/conda-publish-action@v1.3
         with:
-          subDir: ../conda.recipe
-          AnacondaToken: ${{ secrets.ANACONDA_TOKEN }}
+          subDir: conda.recipe
+          anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
           
 
