--- a/.github/workflows/Publish_Conda.yml
+++ b/.github/workflows/Publish_Conda.yml
@@ -19,7 +19,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: publish-to-conda
-        uses: fcakyon/conda-publish-action@v1.3
+        uses: Loop3D/conda-publish-action@1.0
         with:
           subdir: conda.recipe
           anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
