--- a/.github/workflows/Publish_Conda.yml
+++ b/.github/workflows/Publish_Conda.yml
@@ -18,9 +18,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: publish-to-conda
-        uses: fcakyon/conda-publish-action@v1.3
+        #uses: fcakyon/conda-publish-action@v1.3
+        uses: maxibor/conda-package-publish-action@v1.1
         with:
           subdir: conda.recipe
           anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
-          platforms: 'win osx linux'
+          #platforms: 'win osx linux'
 
